--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,15 +1,15 @@
 .container {
   /* min-height: 100vh; */
   padding: 0 0.5rem;
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   // height: 100vh;
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 1rem 0;
   // flex: 1;
   // display: flex;
   // flex-direction: column;
@@ -24,6 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  white-space: pre-wrap;
 }
 
 .footer a {
