--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -20,6 +20,7 @@
 
 .footer {
   // width: 100%;
+  // position: relative;
   // height: 100px;
   // border-top: 1px solid #eaeaea;
   // display: flex;
@@ -34,7 +35,7 @@
   // }
   padding: 1vw;
   > div {
-    white-space: nowrap;
+    // white-space: nowrap;
     text-align: center;
     margin: auto;
   }
