--- a/components/game/Game.module.scss
+++ b/components/game/Game.module.scss
@@ -24,7 +24,8 @@
   width: 100%;
   height: 10vw;
   min-height: 60px;
-  margin-top: 2vw;
+  max-height: 100px;
+  margin-top: 5px;
   background-color: var(--button-bg-color);
   color: var(--button-color);
 }
